java9ではテスト実行時に `--add-modules` を付加するように