@@ -12,6 +12,15 @@
     <artifactId>nablarch-parent</artifactId>
     <version>1.0.0</version>
   </parent>
+  
+  <profiles>
+    <profile>
+      <id>java9</id>
+      <properties>
+        <junit.additionalArgLine>--add-modules java.activation</junit.additionalArgLine>
+      </properties>
+    </profile>
+  </profiles>
 
   <dependencies>
     <dependency>
